--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bower-signalr",
+  "name": "@careercruising/signalr",
   "version": "1.0.0",
   "description": "Bower package for the SignalR JavaScript client. Source code is in the main repo at https://github.com/SignalR/SignalR, please log issues there.",
   "main": "jquery.signalR.js",
